fleshed out two missing sections and added more on Git

--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -6,7 +6,12 @@ knitr::opts_chunk$set(echo = FALSE)
 ```
 
 ## Overview
-TBD
+This chapter will introduce the concept of tracking changes to a project over
+the project's lifespan using version control, as well as strategies for 
+effectively collaborating with others. This chapter also demonstrates how to use
+version control tool (Git and GitHub) with JupyterHub to track changes to a 
+data science project over time, as well as share code with collaborators and the
+project's intended audience.
 
 ## Chapter learning objectives
 By the end of the chapter, students will be able to:
@@ -85,12 +90,12 @@ include_graphics("img/version_control/new_repository_01.png")
 
 On the next page, do the following: 
 
-- [ ] enter the name for the repository (here we put `dsci-101`) 
+- [ ] enter the name for the repository (here we put `languages_in_canada`) 
 - [ ] Select "Public"
 - [ ] Select "Initialize this repository with a README"
 - [ ] click on the green "Create Repository" button
 
-> By clicking "Public" your repository is viewable by anyone, however, only you, 
+> By clicking "Public" your repository is viewable by anyone, however, only you 
 and any collaborators you specify have permission to create or edit files. If 
 you have a project that needs to be kept private, you can instead select 
 "Private" when creating a repository.
@@ -108,57 +113,65 @@ include_graphics("img/version_control/new_repository_03.png")
 ## Moving changes from GitHub to JupyterHub
 
 Although there are several ways to create and edit files on 
-[GitHub.com](https://github.com/) they are not quite powerful enough for 
+[GitHub](https://github.com/) they are not quite powerful enough for 
 efficiently creating and editing complex files, or files that need to be 
 executed to assess whether they work (e.g., files containing code). Thus, it is 
-useful to be able to connect the course repository that was created on 
-[GitHub.com](https://github.com/) to a coding environment. This can be done on 
+useful to be able to connect the project repository that was created on 
+[GitHub](https://github.com/) to a coding environment. This can be done on 
 your local computer, or using a JupyterHub. Given that we use a JupyterHub with 
 this course, we will here show how to do this using a JupyterHub.
 
-We will be using a Jupyter lab git extension tool to bring our 
-[GitHub.com](https://github.com/) project repository to the UBC JupyterHub. 
-There are other ways to do this (e.g., use the Git command line tools in the 
-terminal on JupyterHub), however we think this is the most user friendly way to 
-introduce this. 
+Git is the software the does the job of tracking changes to a project, as well 
+as the moving of a project (and it's history) across different machines. Like 
+many other kinds of software, we as the users have to tell Git how and when to 
+do this. Git commands can be directly entered into a terminal/command line, 
+however there are many Git clients that make this process more user friendly. 
+For this book, we will use the Jupyter lab Git extension tool as our Git client.
 
-On the file browser tab, click the Git+ icon:
+To bring a copy of our [GitHub](https://github.com/) project repository to 
+a JupyterHub, from the JupyterHub click the Git+ icon on the file browser tab:
 
 ```{r clone_01}
 include_graphics("img/version_control/clone_01.png")
 ```
 
-Paste the url of the [GitHub.com](https://github.com/) course repository you 
-created and click the blue "CLONE" button:
+Copy the url from the HTTPS tab of the Code drop down menu on [GitHub](https://github.com/):
 
 ```{r clone_02}
+include_graphics("img/version_control/clone_0X.png")
+```
+
+Paste the url of the [GitHub](https://github.com/) project repository you 
+created and click the blue "CLONE" button:
+
+```{r clone_03}
 include_graphics("img/version_control/clone_02.png")
 ```
 
 On the file browser tab, you will now see a folder for your project's repository 
 (and inside it will be all the files that existed on 
-[GitHub.com](https://github.com/)):
+[GitHub](https://github.com/)):
 
-```{r clone_03}
+```{r clone_04}
 include_graphics("img/version_control/clone_03.png")
 ```
 
 ## Sending changes you make on JupyterHub back to GitHub
 
-Once you make changes (e.g., create or edit files) in your project repository on 
-JupyterHub, you will need to send them back to the project repository on 
-[GitHub.com](https://github.com/) to be able to share these with your 
-collaborators and audience. Again, we can use the Jupyter lab git extension tool 
+Once you make changes, by creating or editing files, in your project repository 
+on JupyterHub, you will need to send them back to the project repository on 
+[GitHub](https://github.com/) to be able to share these with your 
+collaborators and audience. Again, we can use the Jupyter lab Git extension tool 
 to do this. It is a three stage process which includes: 
 
 1. Specifying which files to "add" to the staging area. You can think of this as
 a command which flags which modified files you want to send back to the project 
-repository on [GitHub.com](https://github.com/).
+repository on [GitHub](https://github.com/).
 2. Logging the changes to the flagged files on the local machine (which for us 
 is a JupyterHub). This step requires specifying an associated (useful) message 
 about what was changed. This step is called a "commit".
 3. Push the added and committed changes that currently exist locally (i.e., on 
-JupyterHub) to the project repository on [GitHub.com](https://github.com/)
+JupyterHub) to the project repository on [GitHub](https://github.com/)
 
 Below we walk-through how you can use the Jupyter lab git extension tool to do 
 each of the steps outlined above.
@@ -166,7 +179,7 @@ each of the steps outlined above.
 ### Specifying which files whose changes you want to commit
 
 Below we created and saved a new file (named `eda.ipynb`) that we would 
-like to send back to the project repository on [GitHub.com](https://github.com/). 
+like to send back to the project repository on [GitHub](https://github.com/). 
 To "add" this modified file to the staging area (*i.e.*, flagging that this is a
 file whose changes we would like to log), we click the Jupyter lab git extension 
 icon on the far left-hand side of Jupyter lab:
@@ -175,23 +188,24 @@ icon on the far left-hand side of Jupyter lab:
 include_graphics("img/version_control/git_add_01.png")
 ```
 
-This opens the Git graphical user interface (GUI) pane, and then we click the 
-plus sign beside the file that we want to "add". Note, because this is the 
-first change for this file that we want to add, it lives under the "Untracked" 
-heading. However, next time we edit this file and want to add the changes we 
-made, we will find it under the "Changed" heading.
+This opens the Jupyter lab Git graphical user interface (GUI) pane, and then we
+click the plus sign beside the file that we want to "add". Note, because this is 
+the first change for this file that we want to add, it lives under the 
+"Untracked" heading. However, next time we edit this file and want to add the 
+changes we made, we will find it under the "Changed" heading.
 
 > Note: we can ignore the `eda-checkpoint.ipynb` file (sometimes called `.ipynb_checkpoints`), as it can be thought of as another type of "back-up" of 
 our Jupyter notebook file we created, and we only need to send the file we 
-directly created and edited to [GitHub.com](https://github.com/).
+directly created and edited to [GitHub](https://github.com/).
 
 ```{r git_add_02}
 include_graphics("img/version_control/git_add_02.png")
 ```
 
-This moves the file from the "Untracked" heading to the "Staged" heading and we 
-are ready to now "commit" the changes to log them and associate a (useful) 
-message about what was changed.
+This moves the file from the "Untracked" heading to the "Staged" heading, 
+essentially flagging this file, so that Git knows this is a change we'd like to 
+log and share with others. Now we are ready to now "commit" the changes to log 
+them and associate a (useful) message about what was changed.
 
 ```{r git_add_03}
 include_graphics("img/version_control/git_add_03.png")
@@ -201,11 +215,13 @@ include_graphics("img/version_control/git_add_03.png")
 
 To log the changes and an associated (useful) message about what was 
 changed, we put our message in the text box at the bottom of the Git GUI pane 
-and click on the blue "Commit" button. Note: It is highly recommended to make 
-this message useful and relevant to the changes that were made, as this can 
-later be used to peruse the file history and understand how the file evolved. 
-This is especially useful when you want to go back in time to checkout an older
-version of a file, or state of the project.
+and click on the blue "Commit" button. 
+
+> It is highly recommended to write useful and meaningful messages about what 
+was changed, as these commit messages, and the time date stamp for a given 
+commit, are the primary means to navigate through our projects histry in the 
+situation where we'd like to view or retrieve a past version of a file, or 
+revert our project to an earlier state.
 
 ```{r git_commit_01}
 include_graphics("img/version_control/git_commit_01.png")
@@ -213,7 +229,7 @@ include_graphics("img/version_control/git_commit_01.png")
 
 After "commiting" the file(s), you will see there there are 0 "Staged" files and we 
 are now ready to push our changes (and the attached commit message) to our 
-course repository on [GitHub.com](https://github.com/):
+project repository on [GitHub](https://github.com/):
 
 ```{r git_commit_02}
 include_graphics("img/version_control/git_commit_02.png")
@@ -222,29 +238,29 @@ include_graphics("img/version_control/git_commit_02.png")
 #### 3. Pushing the changes to [GitHub.com](https://github.com/)
 
 To send our added and committed the changes to the project repository on 
-[GitHub.com](https://github.com/), we need to "Push" them. To do this we click on 
-the cloud icon with the up arrow on the Git GUI pane:
+[GitHub](https://github.com/), we need to "Push" them. To do this we click on 
+the cloud icon with the up arrow on the Jupyter Git tab:
 
 ```{r git_push_01}
 include_graphics("img/version_control/git_push_01.png")
 ```
 
-We will then be prompted to enter our [GitHub.com](https://github.com/) username 
+We will then be prompted to enter our [GitHub](https://github.com/) username 
 and password, and click the blue "OK" button:
 
 ```{r git_push_02}
 include_graphics("img/version_control/git_push_02.png")
 ```
 
-If the files were successfully pushed to our course repository on 
-[GitHub.com](https://github.com/) we will be given the success message shown 
-below. Note: click "Dismiss" to continue working in Jupyter.
+If the files were successfully pushed to our project repository on 
+[GitHub](https://github.com/) we will be given the success message shown 
+below. Click "Dismiss" to continue working in Jupyter.
 
 ```{r git_push_03}
 include_graphics("img/version_control/git_push_03.png")
 ```
 
-If you now go to the project repository on [GitHub.com](https://github.com/) you 
+If you now go to the project repository on [GitHub](https://github.com/) you 
 will see the changes now exist there!
 
 ```{r git_push_04}
@@ -253,17 +269,46 @@ include_graphics("img/version_control/git_push_04.png")
 
 ## Strategies for collaboration when using version control
 
-### Pulling changes from [GitHub.com](https://github.com/)
+### Pulling changes from [GitHub](https://github.com/)
 
 If your collaborators send changes to your project and you want to see and work
 with them locally (i.e., on JupyterHub) then you need to "pull" those changes to 
 the copy of the project repository on JupyterHub to get things in sync. You can 
-do this using the Git GUI pane by clicking on the cloud icon with the down arrow:
+do this using the Git tab by clicking on the cloud icon with the down arrow:
 
 ```{r git_pull_01}
 include_graphics("img/version_control/git_pull_01.png")
 ```
 
+It is good practice when collaborating with others, that you pull any changes 
+your collaborators might have pushed to GitHub at the start of every work 
+session. If you do not do this, and your collaborators have pushed some changes
+to the project to GitHub, then you will be unable to push your changes to GitHub
+without first pulling and merging their changes with yours. Usually, getting out 
+of this situation is not too troublesome, and in most cases Git can 
+automatically merge the changes for you, even if you and your collaborators were
+working on different parts of the same file!
+
+If however, you and your collaborators made changes to the same line of the same
+file, Git will not be able to automatically merge the changes, as it will not
+know whether to keep your version of the line, your collaborators version of the 
+line, or some blend of the two. When this happens, Git will tell you that you 
+have a merge conflict and that it needs human intervention (you!) to tell Git 
+which version of the line(s) where the merge conflict occurred to keep.
+
 ### Handling merge conflicts
 
-TBD
+To handle the merge conflict, we need to open the file that had the merge 
+conflict in a plain text editor and look for special marks that Git puts in the
+file to tell you where the merge conflict occurred. The beginning of the merge
+conflict is preceded by `<<<<<<< HEAD` and the end of the merge conflict is 
+marked by `>>>>>>>`. Between these markings, Git also inserts a separator 
+(`=======`). The version of the change before the separator is your change, and 
+the version that follows the separator was the change that existed on GitHub.
+
+Once you have decided which version of the change to keep, you need to use the 
+plain text editor to remove the special marks that Git added to tell you where 
+the merge conflict was, as well as edit the changes so that only a single 
+version of the change is left in the file (either your version, your 
+collaborator's version, or some blend of the two). The file must be saved, and 
+then added and committed before you will be able to push the changes to GitHub.
