a couple small typos

--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -77,11 +77,11 @@ how to create such a space on for your data analysis project.
 > currently the most widely-used platform.
 
 Before you can create repositories, you will need a 
-[GitHub.com](https://github.com/) account. You can sign up for a free account 
+[GitHub](https://github.com/) account. You can sign up for a free account 
 here: [https://github.com/](https://github.com/)
 
 To create new repository to host your project, Login to 
-[GitHub.com](https://github.com/) and click on the "+" icon in the upper right 
+[https://github.com/](https://github.com/) and click on the "+" icon in the upper right 
 hand corner, and then click on "New Repository" as shown below:
 
 ```{r new_repository_01}
@@ -126,7 +126,7 @@ as the moving of a project (and it's history) across different machines. Like
 many other kinds of software, we as the users have to tell Git how and when to 
 do this. Git commands can be directly entered into a terminal/command line, 
 however there are many Git clients that make this process more user friendly. 
-For this book, we will use the Jupyter lab Git extension tool as our Git client.
+For this book, we will use the Jupyter Git extension tool as our Git client.
 
 To bring a copy of our [GitHub](https://github.com/) project repository to 
 a JupyterHub, from the JupyterHub click the Git+ icon on the file browser tab:
