done full draft of written part, need to stil update screen shots

--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -138,7 +138,7 @@ include_graphics("img/version_control/clone_01.png")
 Copy the url from the HTTPS tab of the Code drop down menu on [GitHub](https://github.com/):
 
 ```{r clone_02}
-include_graphics("img/version_control/clone_0X.png")
+include_graphics("img/version_control/clone_01.png")
 ```
 
 Paste the url of the [GitHub](https://github.com/) project repository you 
@@ -312,3 +312,41 @@ the merge conflict was, as well as edit the changes so that only a single
 version of the change is left in the file (either your version, your 
 collaborator's version, or some blend of the two). The file must be saved, and 
 then added and committed before you will be able to push the changes to GitHub.
+
+### Communicating using GitHub issues
+
+When communicating with collaborators regarding ideas, feedback, decisions and 
+other such things about the project, what communication platform should be used
+for written communication? At first glance, email and messaging apps appear to 
+be reasonable choices, but both have flaws that can lead to loss of information
+and non-inclusive team dynamics. 
+
+Email has become a standard written communication platform which is ubiquitously
+used, however, in many cases, much human intervention is required to keep emails
+correctly filed and archived so that it is easy to go back and review all past 
+written communications related to a particular project. Additionally, when 
+working in a team on a project, it is easy to unintentionally leave someone off
+of a team email, and as a consequence some team members can miss out on 
+important information and decision-making opportunities for the project. 
+
+Many messaging apps, allow for channels, where all team members are invited, and thus
+leaving someone out of a conversation is less likely, however, organizing 
+conversations into topics within a project channel, as well as searching for 
+past conversations is usually quite challenging in these apps, as they were not 
+designed for these purposes.
+
+GitHub issues are an alternative written communication medium to email and 
+messaging apps, and were designed specifically to facilitate project-level 
+communication. GitHub issues are created from the issues tab in the project's
+GitHub repository, and they persist there even after the issue is closed (in 
+contrast to email, issues are not deleted). One issue thread is usually created
+per topic, and they are easily searchable using GitHub's search tools. All 
+issues are accessible to all project collaborators, so no one is left out of 
+the conversation. Finally, issues can be setup so that team members get email 
+notifications when a new issue is created, or a new post is made in an issue 
+thread - so adding another notification system is not needed. Replying to issues 
+from email is also possible. Thus, due to all of these advantages for 
+project-level communication, we highly recommend their use for all written
+project-related communications with collaborators.
+
+
