--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -349,4 +349,36 @@ from email is also possible. Thus, due to all of these advantages for
 project-level communication, we highly recommend their use for all written
 project-related communications with collaborators.
 
+To open a GitHub issue, first click on the GitHub issues tab:
 
+```{r issue_01}
+#include_graphics("img/version_control/issue_01.png")
+```
+
+Next click new issue:
+
+```{r issue_02}
+#include_graphics("img/version_control/issue_02.png")
+```
+
+Add an issue title (which acts like an email subject line), and then put the 
+written communication in the larger text box. Finally click "Submit new issue"
+to post the issue to share with others:
+
+```{r issue_03}
+#include_graphics("img/version_control/issue_03.png")
+```
+
+You can reply to an issue that someone opened by adding your written response to
+the large text box and clicking comment:
+
+```{r issue_04}
+#include_graphics("img/version_control/issue_04.png")
+```
+
+When a conversation is resolved, you can click "Close issue", and closed issue 
+can be later viewed be clicking "Closed" header link in the issue tab:
+
+```{r issue_05}
+#include_graphics("img/version_control/issue_05.png")
+```
