images added up until Strategies for collaboration when using version control.

--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -1,7 +1,9 @@
 # Using Version control for collaboration {#version_control}
 
-```{r setup_version_control, echo = FALSE}
+```{r setup_version_control, echo = FALSE, message = FALSE, warning = FALSE}
 library(knitr)
+library(magrittr)
+library(magick)
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
@@ -59,6 +61,7 @@ aptly points out, future you often has to collaborate with past you.
 
 -- Mark T. Holder
 
+
 ## Creating a space to share your code online
 
 [GitHub](https://github.com/) is an example of a remote version control 
@@ -85,7 +88,13 @@ To create new repository to host your project, Login to
 hand corner, and then click on "New Repository" as shown below:
 
 ```{r new_repository_01}
-include_graphics("img/version_control/new_repository_01.png")
+#include_graphics("img/version_control/new_repository_01.png")
+image_read("img/version_control/new_repository_01.png") %>% 
+  image_flop() %>% 
+  image_crop("3632x1148") %>% 
+  image_flop() #%>% 
+  #image_shadow() %>% 
+  #image_resize(geometry_size_pixels(height = 1700))
 ```
 
 On the next page, do the following: 
@@ -100,15 +109,122 @@ and any collaborators you specify have permission to create or edit files. If
 you have a project that needs to be kept private, you can instead select 
 "Private" when creating a repository.
 
-```{r new_repository_02}
-include_graphics("img/version_control/new_repository_02.png")
+```{r new_repository_02_old}
+#include_graphics("img/version_control/new_repository_02.png")
+image_read("img/version_control/new_repository_02.png") %>% 
+  image_flop() %>% 
+  image_crop("1700x2296+1000-150") %>% 
+  image_flop() #%>% 
+  #image_shadow() %>% 
+  #image_resize(geometry_size_pixels(height = 1700))
 ```
 
 Now you should have a repository that looks something like this:
 
 ```{r new_repository_03}
-include_graphics("img/version_control/new_repository_03.png")
+image_read("img/version_control/new_repository_03.png") %>% 
+  image_flop() %>% 
+  image_crop("3632x1700") %>% 
+  image_flop() 
 ```
+
+
+## Edit and add materials in your course repository on GitHub
+
+There are several ways you can directly use the GitHub web interface; either 
+using the pen tool to edit existing files, or the “Add file” drop down where you 
+can choose to "Create new file" or "Upload files". This is useful for simple 
+documentation files, for example a project's `README.md` file.
+
+
+### Use the pen tool to edit existing files
+
+The pen tool can be used to edit existing plain text files. Click on the pen 
+tool:
+
+```{r pen_tool_01}
+image_read("img/version_control/pen-tool_01.png") %>% 
+  image_flop() %>% 
+  image_crop("3632x1500") %>% 
+  image_flop() 
+```
+
+Use the text box to make your changes:
+
+```{r pen_tool_02}
+image_read("img/version_control/pen-tool_02.png") %>% 
+  image_flop() %>% 
+  image_crop("3632x1300") %>% 
+  image_flop() 
+```
+
+Save/commit your changes by click the green "Commit changes" button:
+
+```{r pen_tool_03}
+image_read("img/version_control/pen-tool_03.png") %>% 
+  image_crop("3632x1500+1+500")
+```
+
+
+### Use the "Add file" drop down menu and "Create new file" to create new plain text files
+
+New, plain text files can be created via the "Add file" drop down menu and 
+selecting the "Create new file" option:
+
+```{r create_new_file_01}
+image_read("img/version_control/create-new-file_01.png") %>% 
+  image_flop() %>% 
+  image_crop("3632x1600") %>% 
+  image_flop() 
+```
+
+After click the "Create new file" option, a page will open with a small text box 
+for the file name to be entered, and a larger text box where the desired file 
+content text can be entered. Note the two tabs, "Edit new file" and "Preview". 
+Toggling between them lets you enter and edit text and view what the text will 
+look like when rendered, respectively.
+
+```{r create_new_file_02}
+image_read("img/version_control/create-new-file_02.png") %>% 
+  image_flop() %>% 
+  image_crop("3632x1300") %>% 
+  image_flop() 
+```
+
+Save/commit your changes by click the green "Commit changes" button at the 
+bottom of the page.
+
+```{r create_new_file_03}
+image_read("img/version_control/create-new-file_03.png") %>% 
+  image_crop("3632x1500+1+500") 
+```
+
+
+### Use the "Add file" drop down menu and "Upload files" to get files from my laptop to GitHub
+
+You can also upload files that you have created on your local machine by using 
+the "Add file" drop down menu and selecting "Upload files":
+
+```{r upload_files_01}
+image_read("img/version_control/upload-files_01.png") %>% 
+  image_flop() %>% 
+  image_crop("3632x1600") %>% 
+  image_flop() 
+```
+
+To select the files from your local computer to upload, you can either drag and 
+drop them into the grey box area shown below, or click the "choose your files" 
+link to access a file browser dialog. Once the files you want to upload have 
+been selected, click the green "Commit changes" button at the bottom of the 
+page.
+
+```{r upload_files_02}
+image_read("img/version_control/upload-files_02.png") %>% 
+  image_flop() %>% 
+  image_crop("3632x2300") %>% 
+  image_flop() 
+```
+
 
 ## Moving changes from GitHub to JupyterHub
 
@@ -129,23 +245,27 @@ however there are many Git clients that make this process more user friendly.
 For this book, we will use the Jupyter Git extension tool as our Git client.
 
 To bring a copy of our [GitHub](https://github.com/) project repository to 
-a JupyterHub, from the JupyterHub click the Git+ icon on the file browser tab:
-
-```{r clone_01}
-include_graphics("img/version_control/clone_01.png")
-```
-
-Copy the url from the HTTPS tab of the Code drop down menu on [GitHub](https://github.com/):
+a JupyterHub, copy the url from the HTTPS tab of the Code drop down menu on 
+[GitHub](https://github.com/) to your computer's clipboard:
 
 ```{r clone_02}
-include_graphics("img/version_control/clone_01.png")
+image_read("img/version_control/clone_02.png") %>% 
+  image_crop("3632x1500")
+```
+
+Then from JupyterHub, click the Git+ icon on the file browser tab:
+
+```{r clone_01}
+image_read("img/version_control/clone_01.png") %>% 
+  image_crop("2400x1430+1")
 ```
 
 Paste the url of the [GitHub](https://github.com/) project repository you 
 created and click the blue "CLONE" button:
 
 ```{r clone_03}
-include_graphics("img/version_control/clone_02.png")
+image_read("img/version_control/clone_03.png") %>% 
+  image_crop("2400x1430+1")
 ```
 
 On the file browser tab, you will now see a folder for your project's repository 
@@ -153,7 +273,8 @@ On the file browser tab, you will now see a folder for your project's repository
 [GitHub](https://github.com/)):
 
 ```{r clone_04}
-include_graphics("img/version_control/clone_03.png")
+image_read("img/version_control/clone_04.png") %>% 
+  image_crop("2400x1430+1")
 ```
 
 ## Sending changes you make on JupyterHub back to GitHub
@@ -227,12 +348,16 @@ revert our project to an earlier state.
 include_graphics("img/version_control/git_commit_01.png")
 ```
 
+> When you click the "Commit" button for the first time, you will be prompted to 
+> enter your name and email. This only needs to be done once for each machine 
+> you use Git on.
+
 After "commiting" the file(s), you will see there there are 0 "Staged" files and we 
 are now ready to push our changes (and the attached commit message) to our 
 project repository on [GitHub](https://github.com/):
 
-```{r git_commit_02}
-include_graphics("img/version_control/git_commit_02.png")
+```{r git_commit_03}
+include_graphics("img/version_control/git_commit_03.png")
 ```
 
 #### 3. Pushing the changes to [GitHub.com](https://github.com/)
@@ -264,7 +389,8 @@ If you now go to the project repository on [GitHub](https://github.com/) you
 will see the changes now exist there!
 
 ```{r git_push_04}
-include_graphics("img/version_control/git_push_04.png")
+image_read("img/version_control/git_push_04.png") %>% 
+  image_crop("3632x2000")
 ```
 
 ## Strategies for collaboration when using version control
@@ -277,7 +403,7 @@ the copy of the project repository on JupyterHub to get things in sync. You can
 do this using the Git tab by clicking on the cloud icon with the down arrow:
 
 ```{r git_pull_01}
-include_graphics("img/version_control/git_pull_01.png")
+#include_graphics("img/version_control/git_pull_01.png")
 ```
 
 It is good practice when collaborating with others, that you pull any changes 
