--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -306,7 +306,7 @@ file whose changes we would like to log), we click the Jupyter lab git extension
 icon on the far left-hand side of Jupyter lab:
 
 ```{r git_add_01}
-include_graphics("img/version_control/git_add_01.png")
+image_read("img/version_control/git_add_01.png")
 ```
 
 This opens the Jupyter lab Git graphical user interface (GUI) pane, and then we
@@ -320,7 +320,7 @@ our Jupyter notebook file we created, and we only need to send the file we
 directly created and edited to [GitHub](https://github.com/).
 
 ```{r git_add_02}
-include_graphics("img/version_control/git_add_02.png")
+image_read("img/version_control/git_add_02.png")
 ```
 
 This moves the file from the "Untracked" heading to the "Staged" heading, 
@@ -329,7 +329,7 @@ log and share with others. Now we are ready to now "commit" the changes to log
 them and associate a (useful) message about what was changed.
 
 ```{r git_add_03}
-include_graphics("img/version_control/git_add_03.png")
+image_read("img/version_control/git_add_03.png")
 ```
 
 ### Log the changes and an associated (useful) message about what was changed
@@ -345,7 +345,7 @@ situation where we'd like to view or retrieve a past version of a file, or
 revert our project to an earlier state.
 
 ```{r git_commit_01}
-include_graphics("img/version_control/git_commit_01.png")
+image_read("img/version_control/git_commit_01.png")
 ```
 
 > When you click the "Commit" button for the first time, you will be prompted to 
@@ -357,7 +357,7 @@ are now ready to push our changes (and the attached commit message) to our
 project repository on [GitHub](https://github.com/):
 
 ```{r git_commit_03}
-include_graphics("img/version_control/git_commit_03.png")
+image_read("img/version_control/git_commit_03.png")
 ```
 
 #### 3. Pushing the changes to [GitHub.com](https://github.com/)
@@ -367,14 +367,14 @@ To send our added and committed the changes to the project repository on
 the cloud icon with the up arrow on the Jupyter Git tab:
 
 ```{r git_push_01}
-include_graphics("img/version_control/git_push_01.png")
+image_read("img/version_control/git_push_01.png")
 ```
 
 We will then be prompted to enter our [GitHub](https://github.com/) username 
 and password, and click the blue "OK" button:
 
 ```{r git_push_02}
-include_graphics("img/version_control/git_push_02.png")
+image_read("img/version_control/git_push_02.png")
 ```
 
 If the files were successfully pushed to our project repository on 
@@ -382,7 +382,7 @@ If the files were successfully pushed to our project repository on
 below. Click "Dismiss" to continue working in Jupyter.
 
 ```{r git_push_03}
-include_graphics("img/version_control/git_push_03.png")
+image_read("img/version_control/git_push_03.png")
 ```
 
 If you now go to the project repository on [GitHub](https://github.com/) you 
@@ -395,15 +395,89 @@ image_read("img/version_control/git_push_04.png") %>%
 
 ## Strategies for collaboration when using version control
 
+### Giving collaborators access to your project
+
+As mentioned earlier, GitHub allows you to control who has access to your 
+project. The default of both public and private projects are that only the 
+person who created the GitHub repository has permissions to create, edit and 
+delete files (this is called write access). To give others (i.e., your 
+collaborators) write access to the projects, navigate to the "Settings" tab:
+
+```{r add_collab_01}
+image_read("img/version_control/add_collab_01.png") %>% 
+  image_crop("3632x1250")
+```
+
+Then click "Manage access":
+
+```{r add_collab_02}
+image_read("img/version_control/add_collab_02.png") %>% 
+  image_crop("3632x1200")
+```
+
+And then click the green "Invite a collaborator" button:
+
+```{r add_collab_03}
+image_read("img/version_control/add_collab_03.png") %>% 
+  image_crop("3632x2200")
+```
+
+Type in the collaborator's GitHub username and select their name when it 
+appears:
+
+```{r add_collab_04}
+image_read("img/version_control/add_collab_04.png") %>% 
+  image_crop("3632x1250")
+```
+
+Finally, click the green "Add <COLLABORATORS_GITHUB_USER_NAME> to this repository" button:
+
+```{r add_collab_05}
+image_read("img/version_control/add_collab_05.png") %>% 
+  image_crop("3632x1250")
+```
+
+After this you should see your newly added collaborator listed under the 
+"Manage access" tab, and they should receive an email invitation to join the 
+GitHub repository as a collaborator. They need to accept this invitation via 
+their email invitation to enable their ability to have and use write access.
+
 ### Pulling changes from [GitHub](https://github.com/)
 
 If your collaborators send changes to your project and you want to see and work
 with them locally (i.e., on JupyterHub) then you need to "pull" those changes to 
-the copy of the project repository on JupyterHub to get things in sync. You can 
-do this using the Git tab by clicking on the cloud icon with the down arrow:
+the copy of the project repository on JupyterHub to get things in sync. 
+
+```{r git_pull_00}
+image_read("img/version_control/git_pull_00.png") %>% 
+  image_crop("3632x1900")
+```
+You can do this using the JupyterHub Git tab by clicking on the cloud icon with 
+the down arrow:
 
 ```{r git_pull_01}
-#include_graphics("img/version_control/git_pull_01.png")
+image_read("img/version_control/git_pull_01.png")
+```
+
+Once the files are successfully pulled from GitHub, you need to click "Dismiss"
+to keep working:
+
+```{r git_pull_02}
+image_read("img/version_control/git_pull_02.png")
+```
+
+And then when you open (or refresh) the files whose changes you just pulled,
+you should be able to see them:
+
+```{r git_pull_03}
+image_read("img/version_control/git_pull_03.png")
+```
+
+It can be very useful to review the history of the changes to your project, you
+can do this directly on the JupyterHub by clicking "History" in the Git tab.
+
+```{r git_pull_04}
+image_read("img/version_control/git_pull_04.png")
 ```
 
 It is good practice when collaborating with others, that you pull any changes 
@@ -478,13 +552,15 @@ project-related communications with collaborators.
 To open a GitHub issue, first click on the GitHub issues tab:
 
 ```{r issue_01}
-#include_graphics("img/version_control/issue_01.png")
+image_read("img/version_control/issue_01.png") %>% 
+  image_crop("3632x1250")
 ```
 
 Next click new issue:
 
 ```{r issue_02}
-#include_graphics("img/version_control/issue_02.png")
+image_read("img/version_control/issue_02.png") %>% 
+  image_crop("3632x1250")
 ```
 
 Add an issue title (which acts like an email subject line), and then put the 
@@ -492,19 +568,22 @@ written communication in the larger text box. Finally click "Submit new issue"
 to post the issue to share with others:
 
 ```{r issue_03}
-#include_graphics("img/version_control/issue_03.png")
+image_read("img/version_control/issue_03.png") %>% 
+  image_crop("3632x2500")
 ```
 
 You can reply to an issue that someone opened by adding your written response to
 the large text box and clicking comment:
 
 ```{r issue_04}
-#include_graphics("img/version_control/issue_04.png")
+image_read("img/version_control/issue_04.png") %>% 
+  image_crop("3632x2500")
 ```
 
 When a conversation is resolved, you can click "Close issue", and closed issue 
 can be later viewed be clicking "Closed" header link in the issue tab:
 
 ```{r issue_05}
-#include_graphics("img/version_control/issue_05.png")
+image_read("img/version_control/issue_05.png") %>% 
+  image_crop("3632x1500")
 ```
