Done draft of version control chapter

--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -93,8 +93,7 @@ image_read("img/version_control/new_repository_01.png") %>%
   image_flop() %>% 
   image_crop("3632x1148") %>% 
   image_flop() #%>% 
-  #image_shadow() %>% 
-  #image_resize(geometry_size_pixels(height = 1700))
+  #image_shadow()
 ```
 
 On the next page, do the following: 
@@ -115,8 +114,7 @@ image_read("img/version_control/new_repository_02.png") %>%
   image_flop() %>% 
   image_crop("1700x2296+1000-150") %>% 
   image_flop() #%>% 
-  #image_shadow() %>% 
-  #image_resize(geometry_size_pixels(height = 1700))
+  #image_shadow()
 ```
 
 Now you should have a repository that looks something like this:
@@ -146,7 +144,8 @@ tool:
 image_read("img/version_control/pen-tool_01.png") %>% 
   image_flop() %>% 
   image_crop("3632x1500") %>% 
-  image_flop() 
+  image_flop() #%>% 
+  #image_shadow()
 ```
 
 Use the text box to make your changes:
@@ -155,14 +154,16 @@ Use the text box to make your changes:
 image_read("img/version_control/pen-tool_02.png") %>% 
   image_flop() %>% 
   image_crop("3632x1300") %>% 
-  image_flop() 
+  image_flop() #%>% 
+  #image_shadow()
 ```
 
 Save/commit your changes by click the green "Commit changes" button:
 
 ```{r pen_tool_03}
 image_read("img/version_control/pen-tool_03.png") %>% 
-  image_crop("3632x1500+1+500")
+  image_crop("3632x1500+1+500") #%>% 
+  #image_shadow()
 ```
 
 
@@ -175,7 +176,8 @@ selecting the "Create new file" option:
 image_read("img/version_control/create-new-file_01.png") %>% 
   image_flop() %>% 
   image_crop("3632x1600") %>% 
-  image_flop() 
+  image_flop() #%>% 
+  #image_shadow()
 ```
 
 After click the "Create new file" option, a page will open with a small text box 
@@ -188,7 +190,8 @@ look like when rendered, respectively.
 image_read("img/version_control/create-new-file_02.png") %>% 
   image_flop() %>% 
   image_crop("3632x1300") %>% 
-  image_flop() 
+  image_flop() #%>% 
+  #image_shadow()
 ```
 
 Save/commit your changes by click the green "Commit changes" button at the 
@@ -196,7 +199,8 @@ bottom of the page.
 
 ```{r create_new_file_03}
 image_read("img/version_control/create-new-file_03.png") %>% 
-  image_crop("3632x1500+1+500") 
+  image_crop("3632x1500+1+500") #%>% 
+  #image_shadow()
 ```
 
 
@@ -209,7 +213,8 @@ the "Add file" drop down menu and selecting "Upload files":
 image_read("img/version_control/upload-files_01.png") %>% 
   image_flop() %>% 
   image_crop("3632x1600") %>% 
-  image_flop() 
+  image_flop() #%>% 
+  #image_shadow()
 ```
 
 To select the files from your local computer to upload, you can either drag and 
@@ -222,7 +227,8 @@ page.
 image_read("img/version_control/upload-files_02.png") %>% 
   image_flop() %>% 
   image_crop("3632x2300") %>% 
-  image_flop() 
+  image_flop() #%>% 
+  #image_shadow()
 ```
 
 
@@ -483,35 +489,67 @@ image_read("img/version_control/git_pull_04.png")
 It is good practice when collaborating with others, that you pull any changes 
 your collaborators might have pushed to GitHub at the start of every work 
 session. If you do not do this, and your collaborators have pushed some changes
-to the project to GitHub, then you will be unable to push your changes to GitHub
-without first pulling and merging their changes with yours. Usually, getting out 
-of this situation is not too troublesome, and in most cases Git can 
-automatically merge the changes for you, even if you and your collaborators were
-working on different parts of the same file!
+to the project to GitHub, then you will be unable to push your changes to 
+GitHub. This situation can be recognized by this error message:
+
+```{r merge_conflict_01}
+image_read("img/version_control/merge_conflict_01.png") %>% 
+  image_crop("3632x1900")
+```
+
+Usually, getting out of this situation is not too troublesome. First you need to 
+pull the changes that exist on GitHub that you do not yet have on your machine.
+Usually when this happens, Git can  automatically merge the changes for you, 
+even if you and your collaborators were working on different parts of the same 
+file!
 
 If however, you and your collaborators made changes to the same line of the same
-file, Git will not be able to automatically merge the changes, as it will not
-know whether to keep your version of the line, your collaborators version of the 
-line, or some blend of the two. When this happens, Git will tell you that you 
-have a merge conflict and that it needs human intervention (you!) to tell Git 
-which version of the line(s) where the merge conflict occurred to keep.
+file, Git will not be able to automatically merge the changes when you pull 
+them, as it will not know whether to keep your version of the line(s), your 
+collaborators version of the line(s), or some blend of the two. When this 
+happens, Git will tell you that you have a merge conflict and that it needs 
+human intervention (you!), and which file(s) this occurs in.
+
+```{r merge_conflict_03}
+image_read("img/version_control/merge_conflict_03.png") %>% 
+  image_crop("3632x1900")
+```
 
 ### Handling merge conflicts
 
-To handle the merge conflict, we need to open the file that had the merge 
+To fix the merge conflict we need to open the file that had the merge 
 conflict in a plain text editor and look for special marks that Git puts in the
-file to tell you where the merge conflict occurred. The beginning of the merge
+file to tell you where the merge conflict occurred. 
+
+```{r merge_conflict_04}
+image_read("img/version_control/merge_conflict_04.png") %>% 
+  image_crop("3632x1200")
+```
+
+The beginning of the merge
 conflict is preceded by `<<<<<<< HEAD` and the end of the merge conflict is 
 marked by `>>>>>>>`. Between these markings, Git also inserts a separator 
 (`=======`). The version of the change before the separator is your change, and 
 the version that follows the separator was the change that existed on GitHub.
 
+```{r merge_conflict_05}
+image_read("img/version_control/merge_conflict_05.png") %>% 
+  image_crop("3632x1200")
+```
+
 Once you have decided which version of the change to keep, you need to use the 
 plain text editor to remove the special marks that Git added to tell you where 
 the merge conflict was, as well as edit the changes so that only a single 
 version of the change is left in the file (either your version, your 
-collaborator's version, or some blend of the two). The file must be saved, and 
-then added and committed before you will be able to push the changes to GitHub.
+collaborator's version, or some blend of the two). 
+
+```{r merge_conflict_06}
+image_read("img/version_control/merge_conflict_06.png") %>% 
+  image_crop("3632x1200")
+```
+
+The file must be saved, and then added and committed before you will be able to 
+push the changes to GitHub.
 
 ### Communicating using GitHub issues
 
@@ -577,13 +615,13 @@ the large text box and clicking comment:
 
 ```{r issue_04}
 image_read("img/version_control/issue_04.png") %>% 
-  image_crop("3632x2500")
+  image_crop("3632x2000")
 ```
 
 When a conversation is resolved, you can click "Close issue", and closed issue 
 can be later viewed be clicking "Closed" header link in the issue tab:
 
-```{r issue_05}
-image_read("img/version_control/issue_05.png") %>% 
-  image_crop("3632x1500")
+```{r issue_06}
+image_read("img/version_control/issue_06.png") %>% 
+  image_crop("3632x1900")
 ```
