--- a/index.Rmd
+++ b/index.Rmd
@@ -301,10 +301,27 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
 
 ### Formatting ggplot objects
 
-One common and easy way to format your `ggplot` visualization is to add additional layers to the plot object using the `+` symbol. 
-For example, we can use the `xlab` and `ylab` functions to add layers where we specify human readable labels for the x and y axes. 
-Again, since we are specifying words (e.g. `"Mother tongue (number of Canadian residents)"`) as arguments to `xlab` and `ylab`, we surround them with double quotes.
-There are many more layers we can add to format the plot further, and we will explore these in later chapters.
+It is motivating and exciting that we have already been able to visualize our
+data to help answer our question, but we are not done yet! There is more we can
+(and should) do to improve the interpretability of the data visualization that 
+we created. For example, by default, R uses the column names as the axis labels,
+however, usually these column names do not have enough information about 
+the variable in the column. We really should replace this default with a more
+informative label. For the example above, the column name `mother_tongue` is 
+used as the label for the y-axis, but most people will not know what that is. 
+And even if they did, they will not know how we are measuring mother tongue, nor
+which group of people the measurements were taken. An axis label that 
+read "Mother tongue (number of Canadian residents)" would be much more 
+informative.
+
+Adding additional layers to our visualizations that we create in `ggplot` is one
+common and easy way to improve and refine our data visualizations. New layers 
+are added to `ggplot` objects using the `+` symbol. For example, we can use the 
+`xlab` and `ylab` functions to add layers where we specify meaningful and 
+informative labels for the x and y axes. Again, since we are specifying words 
+(e.g. `"Mother tongue (number of Canadian residents)"`) as arguments to `xlab` 
+and `ylab`, we surround them with double quotes. There are many more layers we 
+can add to format the plot further, and we will explore these in later chapters.
 
 <center>
 ```{r mother_tongue_vs_most_at_home_labs, fig.width=5.75, fig.height=5, warning=FALSE}
