--- a/index.Rmd
+++ b/index.Rmd
@@ -360,7 +360,7 @@ english_mother_tongue <- can_lang %>%
 census_popn <- 35151728
 ```
 
-What does it mean that `r format(english_mother_tongue, scientific = FALSE, big.mark = ",")` people reported that their mother tongue was English in the 2016 Canadian census? To really understand this number, we need context, in particular, how many people are there were in Canada when this data was collected? From the 2016 Canadian census profile we can see that the population was reported to be `r format(census_popn, scientific = FALSE, big.mark = ",")` people. The absolute count of the number of people who report that English is their mother tongue is much more meaningful when we report it in this context. We can even go a step further and transform this absolute count to a relative frequency, or proportion, so that we can represent this as a single meaningful number in our data visualizations. We can do this by dividing the count of the number of people reporting a given language as their mother tongue by the count of the number of peole who live in Canada. For example, the proportion of people who eported that their mother tongue was English in the 2016 Canadian census was `r format(round(english_mother_tongue/census_popn, 2), scientific = FALSE, big.mark = ",")`.
+What does it mean that `r format(english_mother_tongue, scientific = FALSE, big.mark = ",")` people reported that their mother tongue was English in the 2016 Canadian census? To really understand this number, we need context. In particular, how many people were in Canada when this data was collected? From the 2016 Canadian census profile, we can see that the population was reported to be `r format(census_popn, scientific = FALSE, big.mark = ",")` people. The absolute count of the number of people who report that English is their mother tongue is much more meaningful when we report it in this context. We can even go a step further and transform this absolute count to a relative frequency, or proportion, so that we can represent this as a single meaningful number in our data visualizations. We can do this by dividing the number of people reporting a given language as their mother tongue by the number of people who live in Canada. For example, the proportion of people who reported that their mother tongue was English in the 2016 Canadian census was `r format(round(english_mother_tongue/census_popn, 2), scientific = FALSE, big.mark = ",")`.
 
 We can use the `mutate` function in R to do this for all of the languages in the 2016 Canadian census data set. `mutate` is useful for creating new columns in a data frame, as well as transforming existing columns. It's general syntax is: `mutate(dataframe, column_to_create/transform = value/how_to_transform)`. Below we use mutate to calculate the proportion of people reporting a given language as their mother tongue for all the languages in the `can_lang` data set:
 
