--- a/index.Rmd
+++ b/index.Rmd
@@ -351,7 +351,7 @@ from a visualization.
 
 ### Changing the units
 
-```{r}
+```{r changing_the_units, include = FALSE}
 english_mother_tongue <- can_lang %>% 
   filter(language == "English") %>% 
   pull(mother_tongue)
