--- a/index.Rmd
+++ b/index.Rmd
@@ -401,7 +401,7 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
 ```
 </center>
 
-From the visualization above, we can now clearly see that not just a lot, but that the majority Canadians reported English as their mother tongue and as the language they speak most often at home. Changing the units to include this context increases our understanding and allows us to better interpret the numbers in our data set.
+From the visualization above, we can now clearly see that not just a lot, but that the majority of Canadians reported English as their mother tongue and as the language they speak most often at home. Changing the units to include this context increases our understanding and allows us to interpret the numbers in our data set better.
 
 ### Coloring points by group
 Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points on the 
