--- a/index.Rmd
+++ b/index.Rmd
@@ -409,7 +409,7 @@ scatter plot we have already created by group/category. For example,
 given that we have the higher level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
 scatter plot to represent each language's higher-level language category.
 
-To do this we modify our scatter plot code above. Specifically, we will add an argument to the `aes` function, specifying that the points should be coloured by the `category` column:
+To do this, we modify our scatter plot code above. Specifically, we will add an argument to the `aes` function, specifying that the points should be coloured by the `category` column:
 
 <center>
 ```{r scatter_colour_by_category, fig.width=7.75, fig.height=4, warning=FALSE}
