--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -1,6 +1,6 @@
-# Using Version control for collaboration {#version_control}
+# Collaboration with version control {#version_control}
 
-```{r setup_version_control, echo = FALSE, message = FALSE, warning = FALSE}
+```{r 04-setup_version_control, echo = FALSE, message = FALSE, warning = FALSE}
 library(knitr)
 library(magrittr)
 library(magick)
@@ -8,58 +8,47 @@ knitr::opts_chunk$set(echo = FALSE)
 ```
 
 ## Overview
-This chapter will introduce the concept of tracking changes to a project over
-the project's lifespan using version control, as well as strategies for 
-effectively collaborating with others. This chapter also demonstrates how to use
-version control tool (Git and GitHub) with JupyterHub to track changes to a 
-data science project over time, as well as share code with collaborators and the
-project's intended audience.
+This chapter will introduce the concept of using version control systems to track changes to a project over
+its lifespan, to share and edit code in a collaborative team, and to distribute the finished project to its intended audience.
+This chapter also demonstrates how to implement these ideas effectively 
+in practice using [Git](https://git-scm.com), [GitHub](https://github.com), and JupyterHub.
 
 ## Chapter learning objectives
 By the end of the chapter, students will be able to:
 
-- Describe what version control is and why data analysis projects can benefit 
-from using it
-- Create a remote version control repository on GitHub.com
+- Describe what version control is and why data analysis projects can benefit from it
+- Create a remote version control repository on GitHub
 - Move changes to files from GitHub to JupyterHub, and from JupyterHub to GitHub
-- Use best practices for collaboration when using version control to collaborate 
-on a project with others
+- Give collaborators access to the repository
+- Resolve conflicting edits made by multiple collaborators
+- Communicate with collaborators using issues
+- Use best practices when collaborating on a project with others
 
-## What is version control and why should I use it?
+## What is version control, and why should I use it?
 
-Good data analysis projects require iteration and revision to move from project
-ideation, through proof-of-concept to a finished product that is ready to be 
-communicated to the intended audience. Without deliberate and 
-conscious effort towards tracking which version of the analysis code led to 
-which version of the results, data analysis projects can quickly and easily 
-become messy, and the results irreproducible. Additionally,
-the iterative nature of data analysis projects means that there are usually 
-several times in a project where one would like to go back to an earlier version
-of a code file, or back in time to an earlier state of the project to experiment 
-or test things. Finally,
-data analysis projects are rarely completed by a single person alone, and 
-instead teams of people typically collaborate. This means that files need to be 
-shared across multiple computers, and multiple people usually end up editing a
-single file. In such a situation, determining which version of that file is 
-the latest and most up to date can be a challenge - especially when two people 
-are working on the same file at once!
+Data analysis projects often require iteration and revision to move from an initial idea 
+to a finished product that is ready for the intended audience. Without 
+deliberate and conscious effort towards tracking changes made to the analysis, 
+projects tend to become messy, with mystery results files that cannot be reproduced,
+temporary files with snippets of ideas, mind-boggling filenames like `document_final_draft_v5_final.txt`,
+large blocks of commented code "saved for later," and more. Additionally,
+the iterative nature of data analysis projects makes it important to be able to examine
+earlier versions of code and writing. Finally, data analyses are typically completed by a team of 
+people rather than a single person. This means that files need to be 
+shared across multiple computers, and multiple people often end up editing the project
+simultaneously. In such a situation, determining who has the latest version of the project---and
+how to resolve conflicting edits---can be a real challenge.
 
-Version control helps solve these challenges in analysis projects, particularly 
-those that involve code, by tracking changes to code and data over 
-the lifespan of a project (including when the changes were made and who made 
-them). Version control also provides means to retreive earlier versions of a 
-file (or files), or even go back in time to earlier states of the 
-project. Finally, it also facilitates the merging changes from different
-collaborators working on the project - even when they are working on the same 
-file [@wilson2014best]!
-
-You might find yourself saying, but I am not collaborating, so I don't need to 
-use or learn version control. However, as this popular data science quote 
-aptly points out, future you often has to collaborate with past you.
-
-*You mostly collaborate with yourself, and me-from-two-months-ago never responds to email*
-
--- Mark T. Holder
+Version control helps solve these challenges by tracking changes to the files in the 
+analysis (code, writing, data, etc) over the lifespan of the project, including when the changes were made and who made 
+them. This provides the means both to view earlier versions of the project and to revert changes.
+Version control also facilitates collaboration via tools to share edits with others and resolve conflicting edits. 
+But even if you're working on a project alone, you should still use version control.
+It helps you keep track of what you've done, when you did it, and what you're planning to do next!
+ 
+> *You mostly collaborate with yourself, and me-from-two-months-ago never responds to email.*
+> 
+> --Mark T. Holder
 
 
 ## Creating a space to share your code online
@@ -98,10 +87,10 @@ image_read("img/version_control/new_repository_01.png") %>%
 
 On the next page, do the following: 
 
-- [ ] enter the name for the repository (here we put `languages_in_canada`) 
-- [ ] Select "Public"
-- [ ] Select "Initialize this repository with a README"
-- [ ] click on the green "Create Repository" button
+- enter the name for the repository (here we put `languages_in_canada`) 
+- Select "Public"
+- Select "Initialize this repository with a README"
+- click on the green "Create Repository" button
 
 > By clicking "Public" your repository is viewable by anyone, however, only you 
 and any collaborators you specify have permission to create or edit files. If 
